syntax = "proto3";

package pb;

option go_package = "github.com/tricong1998/go-ecom/cmd/payment/pb";

message ReadPaymentRequest {
  uint64 id = 1;
}